# projekt-produkty

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: cicd.yaml
src/: app.py  example_wig20_data.csv  requirements.txt  stock_exchange_data.py  weather_data.py
src/datasets/: example_wig20_data_daily.csv  example_wig20_data_hourly.csv  exmple_wig20_data_daily.csv
src/llm/: prompts.py  responses.py
src/ui/: settings_page.py  stocks_data_page.py  weather_data_page.py
tests/: test_llm_responses.py  test_stock_exchange_data.py  test_ui_stock_data_page.py  test_weather_data.py
