[project]
name = "projekt-produkty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "mplfinance>=0.12.10b0",
    "plotly>=6.1.2",
    "streamlit>=1.45.1",
    "yfinance>=0.2.61",
]
