[project]
name = "projekt-produkty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "dotenv>=0.9.9",
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "ipykernel>=6.29.5",
    "mplfinance>=0.12.10b0",
    "openai>=1.87.0",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "pytest>=8.4.0",
    "requests>=2.32.3",
    "streamlit>=1.45.1",
    "streamlit-folium>=0.25.0",
    "timezonefinder>=6.5.9",
    "yfinance>=0.2.61",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ['src']
include = ['projekt-produkty*']

[tool.uv.sources]
projekt-produkty = { workspace = true }

[dependency-groups]
dev = [
    "projekt-produkty",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]


[tool.ruff]
lint.ignore = ["F841"]
